--- a/src/components/navigator.css
+++ b/src/components/navigator.css
@@ -2,8 +2,18 @@
   border-style: none;
   font-family: sans-serif;
   border-color: black;
+  color: grey;
   background: black;
   background-image: linear-gradient(to bottom,#3c3c3c 0,#222 100%);
   height: 50px;
   padding: 0px 20px 0px 20px;
+}
+
+.button-inverse:hover {
+    color: white;
+}
+
+.active {
+    background-color: grey;
+    color: white;
 }
