Create a decent card info layout

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,15 @@ body {
   background: black;
   color: white;
 }
+
+.debug-red {
+    background: red;
+}
+
+.debug-green {
+    background: green;
+}
+
+.debug-blue {
+    background: blue;
+}
